# hiplex-website

./: Website.hs  contact.markdown  docs.markdown  hiplex-website.cabal  index.markdown  mechanism.markdown  news.markdown  papers.markdown  software.markdown  workflow.markdown
css/: custom.css  side-menu.css
docs/: CNAME  contact.html  index.html  mechanism.html  news.html  papers.html  software.html  workflow.html
docs/css/: custom.css  side-menu.css
templates/: default.html
